# WebServer

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  DEPLOY.md  DEVELOPMENT.md  Dockerfile  README.md  TODO.md  build.sh  build_and_test.sh  config.ini  config.json  dev.sh  help.md  manage.sh  preview.yml  readme.md  test_params.sh
benchmark/: CMakeLists.txt  logger_benchmark.cpp  main.cpp  thread_pool_benchmark.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake  webserver-config.cmake.in
cmake/config/: CompilerOptions.cmake  Dependencies.cmake  color_output-config.cmake.in
code/: main.cpp
code/buffer/: buffer.cpp  buffer.h  circular_buffer.cpp  circular_buffer.h
code/config/: config.cpp  config.h  config.ini
code/http/: httpconn.cpp  httprequest.cpp  httpresponse.cpp
code/log/: log.cpp  log.h
code/pool/: sqlconnpool.cpp  threadpool.h
code/server/: epoller.cpp  webserver.cpp  webserver.h
code/timer/: heaptimer.cpp
docs/: api-design.md  benchmark.md  color_output.md  cpp-implementation.md  detailed-design.md  development-plan.md  functional-modules.md  installation.md  project-overview.md  requirements-analysis.md  system-architecture.md  technical-implementation.md  testing-architecture.md  testing-guide.md  testing.md  usage.md
include/: CMakeLists.txt  ColorOutput.hpp  CompressionUtil.hpp  Config.hpp  ConnectionManager.hpp  HttpParser.hpp  HttpStatus.hpp  Logger.hpp  MemoryPool.hpp  MultiLevelMemoryPool.hpp  Router.hpp  ThreadPool.hpp  TokenBucket.hpp  WebServer.hpp
include/http/: CompressionPolicy.hpp  ContentNegotiator.hpp  HttpCompressionMiddleware.hpp  HttpProcessor.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  PipelinedConnectionHandler.hpp
include/utils/: DateTimeUtils.hpp
modules/ColorOutput/: CMakeLists.txt
modules/ColorOutput/include/webserver/color/: output.hpp
modules/ColorOutput/src/: output.cpp
modules/cmake/: color_output-config.cmake.in
scripts/: benchmark.sh  build.sh  clean.sh  coverage.sh  init_db.sh  install.sh  manage.sh  test.sh
sql/: mysql.sql
src/: CMakeLists.txt  CompressionUtil.cpp  Config.cpp  ConnectionManager.cpp  HttpParser.cpp  HttpStatus.cpp  Logger.cpp  MemoryPool.cpp  MultiLevelMemoryPool.cpp  Router.cpp  Socket.h  ThreadPool.cpp  TokenBucket.cpp  WebServer.cpp  WebServer.h  WebServer.hpp  main.cpp
src/http/: CompressionPolicy.cpp  ContentNegotiator.cpp  HealthCheckController.cpp  HealthCheckController.h  HttpCompressionMiddleware.cpp  HttpProcessor.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  PipelinedConnectionHandler.cpp
src/ssl/: SSLContext.cpp  SSLContext.h  SSLSocket.cpp  SSLSocket.h
src/utils/: DateTimeUtils.cpp  DateTimeUtils.hpp
test/: CMakeLists.txt  ColorOutputTest.cpp  Config_test.cpp  HttpParser_test.cpp  HttpStatus_test.cpp  Logger_test.cpp  Makefile  MemoryPool_test.cpp  MultiLevelMemoryPool_test.cpp  WebServer_test.cpp  fixtures_example_test.cpp  test.cpp  test_multi_level_memory_pool.cpp
test/fixtures/: README.md  base_fixtures.h  fixture_factory.h  logger_fixtures.h  memory_pool_fixtures.h  network_fixtures.h  thread_pool_fixtures.h
test/modules/: CMakeLists.txt
test/modules/core/: CMakeLists.txt
test/modules/http/: CMakeLists.txt  HttpStatus_test.cpp
test/modules/logger/: CMakeLists.txt
test/modules/memory/: CMakeLists.txt  MemoryPool_test.cpp  test_multi_level_memory_pool.cpp
test/modules/ssl/: CMakeLists.txt
test/modules/thread/: CMakeLists.txt  ThreadPool_test.cpp
test/modules/utils/: CMakeLists.txt
webbench-1.5/: Makefile  webbench.c
